--- a/Apropos.html
+++ b/Apropos.html
@@ -24,10 +24,10 @@
         <div class="contenu">
             <p>
              Bonne expérience en gestion de projets sur une durée de 6 à 12 mois, aptitude à la
-             collecte et à l’analyse des données, fort engagement solidaire et developpeur en devenir, 
+             collecte et à l’analyse des données, fort engagement solidaire et developpeur web débutant, 
              mon objectif professionnel est de contribuer à des projets à fort impact social.   
             </p>
-            <button class="submit"> Télécharger mon CV</button>
+            <a href="fichiers pdf\Dondina_LIMAZIE MAZIGNADA_CV+.pdf" target="_blank"><button class="submit" id="downloadCV">Télécharger mon CV</button></a>
         </div>
     
         <div class="image-apropos">
