--- a/Projets.html
+++ b/Projets.html
@@ -22,19 +22,24 @@
     </header>
     <div id="projet">
         <div class="projet-item">
-            <p>1- Organisation d'un forum du moi de l’ESS.</p>
-            <p class="italic">#Organisation, #travail collaboratif, #mobilisation, #animation</p>
-            <button class="submit">Voir</button>
+            <p>1- Organisation d'un forum du mois de l’ESS financer par la CRESS Normandie en partenariat avec l'Université le Havre et certains acteurs locaux de l'ESS.</p>
+            <p class="italic">#Organisation, #travail collaboratif, #mobilisation, #partenariat, #animation</p>
+            <a href="images\2.jpg" target="_blank"><button class="submit">Voir</button></a>
         </div>
         <div class="projet-item">
-            <p>2- Création d'un site d'achat et vente de produits.</p>
+            <p>2- Création d'un site d'achat et vente de produits de seconde main.</p>
             <p class="italic">#Html, #Css, #Js</p>
-            <button class="submit">Voir</button>
+            <button class="submit">En cours</button>
         </div>
         <div class="projet-item">
-            <p>3- Création et gestion du site et des réseaux sociaux pour un programme de formation.</p>
+            <p>3- Organisation d’une rencontre d’échange avec les anciens étudiants du Master IPESD.</p>
+            <p class="italic">#organisation, #mobilisation, #recherche de financement, #travail collaboratif #partenariat</p>
+            <a href="images/4.jpg" target="_blank"><button class="submit">Voir</button></a>
+        </div>
+        <div class="projet-item">
+            <p>4- Création et gestion du site et des réseaux sociaux pour un programme de formation.</p>
             <p class="italic">#gestion de site, #création de contenu, #canva, #wix.com</p>
-            <button class="submit">Voir</button>
+            <a href="https://www.instagram.com/masteripesd?utm_source=qr&igsh=MTMzN3RzYnp2d2w1bw==" target="_blank"><button class="submit">Voir</button></a>
         </div>
     </div>
     <footer>
