--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="presentation-texte">
             <p>Bonjour, je suis <span class="special">Michel Dondina</span>, gestionnaire de projets en économie sociale et solidaire et le développement durable,
             développeur en devenir et passionné par les projets à fort impact social, le web et design</p>
-            <button class="submit">Voir mes projets</button>
+           <button class="submit" onclick="window.location.href='Projets.html'">Voir mes projets</button>
         </div>
     
         <div id="image-presentation">
