--- a/Compétences.html
+++ b/Compétences.html
@@ -69,10 +69,10 @@
       <li><label>Javascript</label>
         <div class="barre"><div class="niveau" style="width: 50%"></div></div>
       </li>
-      <li><label>Microsoft Office</label>
+      <li><label>Microsoft Office & Ms Project</label>
         <div class="barre"><div class="niveau" style="width: 85%"></div></div>
       </li>
-      <li><label>Stata & Qgis</label>
+      <li><label>Stata & Qgis & Gams</label>
         <div class="barre"><div class="niveau" style="width: 58%"></div></div>
       </li>
     </ul>
