--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="presentation">
         <div class="presentation-texte">
             <p>Bonjour, je suis <span class="special">Michel Dondina</span>, gestionnaire de projets en économie sociale et solidaire et le développement durable,
-            développeur en devenir et passionné par les projets à fort impact social, le web et design</p>
+                passionné par les projets à fort impact social, le développement web et design</p>
            <button class="submit" onclick="window.location.href='Projets.html'">Voir mes projets</button>
         </div>
     
